testsuite/tests/dependent/should_fail/T11471.stderr

T11471.hs:15:10: error:
    • Couldn't match a lifted type with an unlifted type
      When matching types
        a :: *
        Int# :: TYPE 'IntRep
      Expected: Proxy a
        Actual: Proxy Int#
    • In the first argument of ‘f’, namely ‘(undefined :: Proxy Int#)’
      In the expression: f (undefined :: Proxy Int#) 3#
      In an equation for ‘bad’: bad = f (undefined :: Proxy Int#) 3#
    • Relevant bindings include bad :: F a (bound at T11471.hs:15:1)
